--- a/my_bookkeeping/src/index.css
+++ b/my_bookkeeping/src/index.css
@@ -8,25 +8,25 @@
 }
 
 .home-bg {
-    height: calc(100vh - 51px);
+    height: calc(100vh - 55.97px);
     width: 100vw;
-    background-image: url('./src/assets/bg.png');
+    background-image: url('./src/assets/bg1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
 
-li, a, button, .koin_cont > p{
+.navbar_list > *, .logo{
     font-weight: 500;
     font-size: 1rem;
     text-decoration: none;
     color: white;
 }
 
-header {
+.nav-head {
     display: flex;
     justify-content: space-between;
-    padding: 1rem 2rem;
+    /* padding: 1rem 2rem; */
     background-color: blue;
 }
 
